@@ -107,12 +107,17 @@ container new_borderlayoutmanager::create(const container_impl &parent,
 
 void borderlayoutmanagerObj::update_title(const text_param &title)
 {
-	impl->run_as([me=ref{this}, title]
-		     (ONLY IN_THREAD)
-		     {
-			     me->update_title(IN_THREAD, title);
-		     });
+	impl->run_as
+		([=, impl=this->impl]
+		 (ONLY IN_THREAD)
+		 {
+			 borderlayoutmanager blm=
+				 impl->create_public_object();
+
+			 blm->update_title(title);
+		 });
 }
+
 
 void borderlayoutmanagerObj::update_title(ONLY IN_THREAD,
 					  const text_param &title)
@@ -135,6 +140,49 @@ void borderlayoutmanagerObj::update_title(ONLY IN_THREAD,
 	}
 
 	impl->bordercontainer_impl->set_title(IN_THREAD, richtext_title);
+}
+
+void borderlayoutmanagerObj::update_border(const border_arg &new_border)
+{
+	update_borders(new_border, new_border, new_border, new_border);
+}
+
+void borderlayoutmanagerObj::update_border(ONLY IN_THREAD,
+					   const border_arg &new_border)
+{
+	update_borders(IN_THREAD,
+		       new_border, new_border, new_border, new_border);
+}
+
+void borderlayoutmanagerObj::update_borders(const border_arg &new_left_border,
+					    const border_arg &new_right_border,
+					    const border_arg &new_top_border,
+					    const border_arg &new_bottom_border)
+{
+	impl->run_as
+		([=, impl=this->impl]
+		 (ONLY IN_THREAD)
+		 {
+			 impl->bordercontainer_impl->set_border
+				 (IN_THREAD,
+				  new_left_border,
+				  new_right_border,
+				  new_top_border,
+				  new_bottom_border);
+		 });
+}
+
+void borderlayoutmanagerObj::update_borders(ONLY IN_THREAD,
+					    const border_arg &new_left_border,
+					    const border_arg &new_right_border,
+					    const border_arg &new_top_border,
+					    const border_arg &new_bottom_border)
+{
+	impl->bordercontainer_impl->set_border(IN_THREAD,
+					       new_left_border,
+					       new_right_border,
+					       new_top_border,
+					       new_bottom_border);
 }
 
 LIBCXXW_NAMESPACE_END
